Fixed buggy image previewer (seperated the jquery function into 2, and destroys by class instead of id now)

--- a/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
+++ b/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
@@ -89,7 +89,9 @@
                     <td>
                         @Html.ActionLink(item.FileType, "FileDisplay", new { documentId = item.Document_ID }, new { target = "_blank" }) 
                         @if (item.FileType == "Picture JPEG") {
-                            @Html.ActionLink("[Preview]", "FileDisplay", new { documentId = item.Document_ID }, new { @class = "preview", id = item.Document_ID})
+                            <div class = "preview_image">
+                                @Html.ActionLink("[Preview]", "FileDisplay", new { documentId = item.Document_ID }, new { @class = "preview", id = item.Document_ID })
+                            </div>
                         }
                     </td>
                     <td>OPEN ME</td>
