--- a/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
+++ b/DocSearch2.1/Views/PublicVM/_PublicTable.cshtml
@@ -9,59 +9,28 @@
                         @Html.Raw(CustomLink.AjaxActionLinkWithFontAwesome(Url.Action("Index", "PublicVM", new
                    {
                        publicId = Model.First().Folder_ID,
-                       filter = "document"
+                       filter = "document",
+                       subNav = ViewData["currentNav"],
+                       prevNav = ViewData["currentNavTitle"],
                    }), "#public_table", "replace-with", "GET", "Type of Document", "fa-sort"))
-
-                        <!--Works, but could be done better (custom extension method)-->
-                        @*<a href="@Url.Action("Index", "PublicVM", new {
-                                    publicId = Model.First().Folder_ID,
-                                    filter = "document"})"
-                            data-ajax-update="#public_table" 
-                            data-ajax-mode="replace-with" 
-                            data-ajax-method="GET" 
-                            data-ajax="true">
-                            Type of Document<i class="fa fa-sort"></i>
-                        </a>*@
-
-                        <!--Simplest, but couldnt add glphicons or font awesome-->
-                        @*@Ajax.ActionLink("Type of Document", "Index", new
-                        {
-                            publicId = Model.First().Folder_ID,
-                            filter = "document"
-                        }, new AjaxOptions
-                        {
-                            HttpMethod = "GET",
-                            InsertionMode = InsertionMode.ReplaceWith,
-                            UpdateTargetId = "public_table"
-                        })*@
                     </th>
                     <th>
                         @Html.Raw(CustomLink.AjaxActionLinkWithFontAwesome(Url.Action("Index", "PublicVM", new
                    {
                        publicId = Model.First().Folder_ID,
-                       filter = "issue"
+                       filter = "issue",
+                       subNav = ViewData["currentNav"],
+                       prevNav = ViewData["currentNavTitle"]
                    }), "#public_table", "replace-with", "GET", "Issue Date", "fa-sort"))
-
-                        @*@Ajax.ActionLink("Issue Date", "Index", new { publicId = Model.First().Folder_ID, filter = "issue" }, new AjaxOptions
-                   {
-                       HttpMethod = "GET",
-                       InsertionMode = InsertionMode.ReplaceWith,
-                       UpdateTargetId = "public_table"
-                   })*@
                     </th>
                     <th>
                         @Html.Raw(CustomLink.AjaxActionLinkWithFontAwesome(Url.Action("Index", "PublicVM", new
                    {
                        publicId = Model.First().Folder_ID,
-                       filter = "effective"
+                       filter = "effective",
+                       subNav = ViewData["currentNav"],
+                       prevNav = ViewData["currentNavTitle"]
                    }), "#public_table", "replace-with", "GET", "Effective Date", "fa-sort"))
-
-                        @*@Ajax.ActionLink("Effective Date", "Index", new { publicId = Model.First().Folder_ID, filter = "effective" }, new AjaxOptions
-                   {
-                       HttpMethod = "GET",
-                       InsertionMode = InsertionMode.ReplaceWith,
-                       UpdateTargetId = "public_table"
-                   })*@
                     </th>
                     <th>
                         @Html.DisplayNameFor(model => model.ToList().First().Description)
@@ -99,7 +68,7 @@
             }
         </table>
 
-        <div class="pagedList col-md-6 col-md-offset-3" data-otf-target="#public_table">
+        <div class="pagedList col-md-6 col-md-offset-3" data-otf-target="#public_table" >
             @Html.PagedListPager(Model, page => Url.Action("Index", new { page, publicId = Model.First().Folder_ID, subNav = ViewData["currentNav"], prevNav = ViewData["currentNavTitle"]}),
             PagedListRenderOptions.MinimalWithItemCountText)
         </div>
