--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -41,8 +41,10 @@
 
                         $form.find("input[type=search]").val("");
 
-                        $form.find("input[name='IssueDateMinRange']").val('@Model.OrderBy(d => d.IssueDate).First().IssueDate.Value.ToString("MM/dd/yyyy", CultureInfo.InvariantCulture)');
-                        $form.find("input[name='IssueDateMaxRange']").val('@Model.OrderByDescending(d => d.IssueDate).First().IssueDate.Value.ToString("MM/dd/yyyy", CultureInfo.InvariantCulture)');
+                        //$form.find("input[name='IssueDateMinRange']").val('Model.OrderBy(d => d.IssueDate).First().IssueDate.Value.ToString("MM/dd/yyyy", CultureInfo.InvariantCulture)');
+                        //$form.find("input[name='IssueDateMaxRange']").val('Model.OrderByDescending(d => d.IssueDate).First().IssueDate.Value.ToString("MM/dd/yyyy", CultureInfo.InvariantCulture)');
+                        $form.find("input[name='IssueDateMinRange']").val(@TempData["IssueDateMin"]);
+                        $form.find("input[name='IssueDateMaxRange']").val(@TempData["IssueDateMax"]);
 
                         if ($(this) == "a") {
                             $(".active").removeClass('active');
